--- a/simulation/ReadMe.Rmd
+++ b/simulation/ReadMe.Rmd
@@ -1,1 +1,10 @@
-#### Simulation ReadMe
+####Simulation ReadMe
+
+Files:
+
+- `simulation_prep.R` generates the folder structure and missingness equation(s) for a set of simulations
+- `simulation_sample_gen.R` generates the samples for a given simulation
+- `simulation_run.R` actually runs the simulation
+
+
+##How to run
