add graphics to custom presentation

--- a/presentation/cust_formatting.tex
+++ b/presentation/cust_formatting.tex
@@ -1,8 +1,14 @@
 %\setbeamertemplate{navigation symbols}{}
 %ß\setbeamertemplate{footline}[frame number]{}
 
-\title[Methods for Selection Bias in the UK Biobank]{Methods for Selection Bias in UKB}
+
+%\title[Methods for Selection Bias in the UK Biobank]{Methods for Selection Bias in UKB}
 \institute[University of Oxford]{University of Oxford, Department of Statistics}
+
+\titlegraphic{
+	\vspace{1cm}
+	\includegraphics[width=3cm]{/Users/valeriebradley/Documents/Oxford/logos/ox_small_cmyk_pos_rect.png}
+}
 
 %\definecolor{oxfordblue}{rgb}{0.267, 0.412, 0.49}
 \definecolor{oxfordblue}{rgb}{0, 0.129, 0.278}
