final fmrib deck

--- a/presentation/biblio.bib
+++ b/presentation/biblio.bib
@@ -192,7 +192,7 @@
 	number = {June},
 	pages = {6335--6342},
 	title = {{Generalized adjustment under confounding and selection biases}},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85059403683{\&}partnerID=40{\&}md5=d87612fd7a9f1c4cc8831887080291ab},
+	url = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/viewFile/17375/16207},
 	year = {2018}
 }
 
