--- a/presentation/cust_formatting.tex
+++ b/presentation/cust_formatting.tex
@@ -3,6 +3,9 @@
 
 \usepackage{tikz}
 \usepackage{colortbl}
+\usepackage[]{algorithm2e}
+\usepackage{pifont}
+\usepackage{amssymb}
 
 \usetikzlibrary{shapes,decorations,arrows,calc,arrows.meta,fit,positioning}
 \tikzset{
@@ -29,6 +32,7 @@
 \definecolor{oxfordred}{RGB}{186, 12, 47}
 \definecolor{oxfordgreen}{RGB}{15,115,97}
 \usecolortheme[named=oxfordblue]{structure}
+
 
 \defbeamertemplate{section page}{mine}[1][]{%
 	\begin{centering}
